--- a/index.html
+++ b/index.html
@@ -21,11 +21,15 @@
     <p id="accelerationYDisplay">Acceleration along the Y-axis: <span id="accelerationY">0</span></p>
     <p id="calibrationTimer">Calibration time remaining: <span id="calibrationTime">10</span> seconds</p>
     <button id="calibrationButton">Calibrate</button>
+    <h2>Gyroscope Data</h2>
+    <p id="gyroscopeXDisplay">Angular velocity along the X-axis: <span id="gyroscopeX">0</span></p>
+    <p id="gyroscopeYDisplay">Angular velocity along the Y-axis: <span id="gyroscopeY">0</span></p>
 </div>
 
 <script>
-    if ('Accelerometer' in window) {
+    if ('Accelerometer' in window && 'Gyroscope' in window) {
         const acl = new Accelerometer({ frequency: 60 });
+        const gyroscope = new Gyroscope({ frequency: 60 });
         let calibrationData = [];
         let calibrationDuration = 10000; // Calibration duration in milliseconds (10 seconds)
         let calibrationCompleted = false;
@@ -85,20 +89,16 @@
             }
         });
 
+        gyroscope.addEventListener("reading", function() {
+            // Display gyroscope values
+            document.getElementById("gyroscopeX").textContent = gyroscope.x.toFixed(2);
+            document.getElementById("gyroscopeY").textContent = gyroscope.y.toFixed(2);
+        });
+
         acl.start();
-
-        // Display live sensor data with zero deviation after calibration
-        setInterval(() => {
-            if (calibrationCompleted) {
-                let liveX = acl.x - offsetX;
-                let liveY = acl.y - offsetY;
-
-                document.getElementById("accelerationX").textContent = liveX.toFixed(2);
-                document.getElementById("accelerationY").textContent = liveY.toFixed(2);
-            }
-        }, 100); // Update display every 100 milliseconds
+        gyroscope.start();
     } else {
-        console.error('Accelerometer not supported.');
+        console.error('Accelerometer or Gyroscope not supported.');
     }
 </script>
 </body>
