--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <div id="output">
     <p id="accelerationXDisplay">Filtered Acceleration along the X-axis: <span id="accelerationX">0</span></p>
     <p id="accelerationYDisplay">Filtered Acceleration along the Y-axis: <span id="accelerationY">0</span></p>
+    <p id="accelerationZDisplay">Filtered Acceleration along the Z-axis: <span id="accelerationZ">0</span></p>
     <p id="calibrationTimer">Calibration time remaining: <span id="calibrationTime">10</span> seconds</p>
     <button id="calibrationButton">Calibrate</button>
 </div>
@@ -28,10 +29,12 @@
         const acl = new Accelerometer({ frequency: 60 });
         let calibrationDataX = [];
         let calibrationDataY = [];
+        let calibrationDataZ = [];
         let calibrationDuration = 10000; // Calibration duration in milliseconds (10 seconds)
         let calibrationCompleted = false;
         let offsetX = 0;
         let offsetY = 0;
+        let offsetZ = 0;
 
         // Kalman filter parameters
         let Q = 0.01; // Process noise covariance
@@ -39,15 +42,18 @@
         let P = 1; // Estimation error covariance
         let x = 0; // Initial estimate for X-axis
         let y = 0; // Initial estimate for Y-axis
+        let z = 0; // Initial estimate for Z-axis
         let K = 0; // Kalman gain
 
         // Function to start calibration
         function startCalibration() {
             calibrationDataX = [];
             calibrationDataY = [];
+            calibrationDataZ = [];
             calibrationCompleted = false;
             offsetX = 0;
             offsetY = 0;
+            offsetZ = 0;
             let calibrationTimeRemaining = calibrationDuration / 1000;
             let calibrationTimerInterval = setInterval(() => {
                 calibrationTimeRemaining--;
@@ -59,12 +65,14 @@
 
             // Start calibration phase
             setTimeout(() => {
-                if (calibrationDataX.length > 0 && calibrationDataY.length > 0) {
+                if (calibrationDataX.length > 0 && calibrationDataY.length > 0 && calibrationDataZ.length > 0) {
                     // Calculate offset as the average of calibration data
                     let sumX = calibrationDataX.reduce((acc, curr) => acc + curr, 0);
                     let sumY = calibrationDataY.reduce((acc, curr) => acc + curr, 0);
+                    let sumZ = calibrationDataZ.reduce((acc, curr) => acc + curr, 0);
                     offsetX = sumX / calibrationDataX.length;
                     offsetY = sumY / calibrationDataY.length;
+                    offsetZ = sumZ / calibrationDataZ.length;
 
                     calibrationCompleted = true;
 
@@ -72,6 +80,7 @@
                     console.log('Calibration complete.');
                     console.log('Offset X:', offsetX);
                     console.log('Offset Y:', offsetY);
+                    console.log('Offset Z:', offsetZ);
                 } else {
                     console.error('No data collected for calibration.');
                 }
@@ -85,10 +94,12 @@
             if (!calibrationCompleted) {
                 calibrationDataX.push(acl.x);
                 calibrationDataY.push(acl.y);
+                calibrationDataZ.push(acl.z);
             } else {
                 // Apply calibration by subtracting offset
                 let calibratedX = acl.x - offsetX;
                 let calibratedY = acl.y - offsetY;
+                let calibratedZ = acl.z - offsetZ;
 
                 // Apply Kalman filter for X-axis
                 let measurementX = calibratedX;
@@ -102,16 +113,17 @@
                 y = y + K * (measurementY - y);
                 P = (1 - K) * P + Q;
 
+                // Apply Kalman filter for Z-axis
+                let measurementZ = calibratedZ;
+                K = P / (P + R);
+                z = z + K * (measurementZ - z);
+                P = (1 - K) * P + Q;
+
                 // Display filtered values
                 document.getElementById("accelerationX").textContent = x.toFixed(2);
                 document.getElementById("accelerationY").textContent = y.toFixed(2);
+                document.getElementById("accelerationZ").textContent = z.toFixed(2);
             }
         });
 
-        acl.start();
-    } else {
-        console.error('Accelerometer not supported.');
-    }
-</script>
-</body>
-</html>
+       
