--- a/index.html
+++ b/index.html
@@ -126,4 +126,10 @@
             }
         });
 
-       
+        acl.start();
+    } else {
+        console.error('Accelerometer not supported.');
+    }
+</script>
+</body>
+</html>
