--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         let distanceX = 0;
         let distanceY = 0;
         let distanceZ = 0;
+        let threshold = 0.1; // Threshold value to reduce noise and bias
 
         // Kalman filter parameters
         let Q = 0.01; // Process noise covariance
@@ -61,6 +62,9 @@
             offsetX = 0;
             offsetY = 0;
             offsetZ = 0;
+            distanceX = 0; // Initialize distance to zero
+            distanceY = 0;
+            distanceZ = 0;
             let calibrationTimeRemaining = calibrationDuration / 1000;
             let calibrationTimerInterval = setInterval(() => {
                 calibrationTimeRemaining--;
@@ -109,19 +113,19 @@
                 let calibratedZ = acl.z - offsetZ;
 
                 // Apply Kalman filter for X-axis
-                let measurementX = calibratedX;
+                let measurementX = Math.abs(calibratedX) < threshold ? 0 : calibratedX; // Apply threshold
                 K = P / (P + R);
                 x = x + K * (measurementX - x);
                 P = (1 - K) * P + Q;
 
                 // Apply Kalman filter for Y-axis
-                let measurementY = calibratedY;
+                let measurementY = Math.abs(calibratedY) < threshold ? 0 : calibratedY; // Apply threshold
                 K = P / (P + R);
                 y = y + K * (measurementY - y);
                 P = (1 - K) * P + Q;
 
                 // Apply Kalman filter for Z-axis
-                let measurementZ = calibratedZ;
+                let measurementZ = Math.abs(calibratedZ) < threshold ? 0 : calibratedZ; // Apply threshold
                 K = P / (P + R);
                 z = z + K * (measurementZ - z);
                 P = (1 - K) * P + Q;
